--- a/pandasTP2.ipynb
+++ b/pandasTP2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 142,
    "id": "87d02bec-5ff8-41f5-b589-b8e05e08e343",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 143,
    "id": "faa54ecf-9b67-4ec5-bf24-e7f552456b8e",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "4  00005  Adh2020    Adhésion         Actif   10,00    31/01/2020          4"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 144,
    "id": "112317e0-7295-49f7-a9d0-e8b67292b66b",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 145,
    "id": "2b4d9b30-6c2d-4280-a96e-96933f1c98af",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "4  00005  Adh2020    Adhésion         Actif   10,00    31/01/2020          4"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,18 +271,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 174,
    "id": "068712a7-0817-42b0-b12e-d53ff771a48e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 17 entries, 0 to 16\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   ID             17 non-null     object        \n",
+      " 1   Campagne       17 non-null     object        \n",
+      " 2   Opération      17 non-null     object        \n",
+      " 3   Type_Adhérent  9 non-null      object        \n",
+      " 4   _Montant_      17 non-null     float64       \n",
+      " 5   Date           17 non-null     datetime64[ns]\n",
+      " 6   Contact_ID     17 non-null     object        \n",
+      "dtypes: datetime64[ns](1), float64(1), object(5)\n",
+      "memory usage: 1.1+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "contact_id_nouveau = paiement.astype({\"Contact_ID\": int}) #conversion de la colonne contact_id en int\n",
-    "operation_nouveau = paiement.astype({\"Opération\": str})"
+    "dataframe_nouveau = paiement.astype({\"Contact_ID\": int}) #conversion de la colonne contact_id en int\n",
+    "paiement['Date']= pd.to_datetime(paiement['Date']) #convertission de la colonne Date en objet Date\n",
+    "paiement['_Montant_'] = paiement['_Montant_'].str.replace(',', '.')\n",
+    "#paiement['_Montant_']= paiement.astype({'_Montant_': int}) #convertission de la colonne Date en objet Date\n",
+    "paiement['_Montant_']\n",
+    "dataframe_nouveau = paiement.astype({\"_Montant_\": float}) #convertission de la colonne Date en objet Date\n",
+    "dataframe_nouveau.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 176,
    "id": "f73d80c0-f3aa-4c4d-b805-0d239e7cb9e7",
    "metadata": {},
    "outputs": [
@@ -290,59 +316,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       ID Campagne   Opération Type_Adhérent _Montant_        Date  Contact_ID\n",
-      "0   00001  Adh2020    Adhésion  Bénéficiaire   10,00    30/11/2019          11\n",
-      "1   00002  Adh2020  Don Unique           NaN   10,00    30/11/2019          11\n",
-      "2   00003  Adh2020    Adhésion   Bienfaiteur   50,00    02/01/2020           1\n",
-      "3   00004  Don2020  Don Unique           NaN   50,00    28/02/2020           1\n",
-      "4   00005  Adh2020    Adhésion         Actif   10,00    31/01/2020           4\n",
-      "5   00006  Adh2020    Adhésion   Bienfaiteur   50,00    15/03/2020           2\n",
-      "6   00007  Adh2020  Don Unique           NaN   20,00    15/03/2020           2\n",
-      "7   00008  Don2020  Don Unique           NaN   30,00    04/04/2020           7\n",
-      "8   00009  Adh2020    Adhésion  Bénéficiaire   10,00    03/03/2020           6\n",
-      "9   00010  Don2020  Don Unique           NaN   50,00    05/05/2020           8\n",
-      "10  00011  Adh2020    Adhésion         Actif   10,00    20/06/2020           8\n",
-      "11  00012  Adh2020  Don Unique           NaN   30,00    20/06/2020           8\n",
-      "12  00013  Adh2020    Adhésion   Bienfaiteur   50,00    20/05/2020           5\n",
-      "13  00014  Adh2020    Adhésion         Actif   10,00    21/04/2020          12\n",
-      "14  00015  Adh2020  Don Unique           NaN   20,00    21/04/2020          12\n",
-      "15  00016  Adh2020    Adhésion         Actif   10,00    30/03/2020           9\n",
-      "16  00017  Don2020  Don Unique           NaN   30,00    15/02/2020           5\n",
+      "       ID Campagne   Opération Type_Adhérent _Montant_       Date  Contact_ID\n",
+      "0   00001  Adh2020    Adhésion  Bénéficiaire   10.00   2019-11-30          11\n",
+      "1   00002  Adh2020  Don Unique           NaN   10.00   2019-11-30          11\n",
+      "2   00003  Adh2020    Adhésion   Bienfaiteur   50.00   2020-02-01           1\n",
+      "3   00004  Don2020  Don Unique           NaN   50.00   2020-02-28           1\n",
+      "4   00005  Adh2020    Adhésion         Actif   10.00   2020-01-31           4\n",
+      "5   00006  Adh2020    Adhésion   Bienfaiteur   50.00   2020-03-15           2\n",
+      "6   00007  Adh2020  Don Unique           NaN   20.00   2020-03-15           2\n",
+      "7   00008  Don2020  Don Unique           NaN   30.00   2020-04-04           7\n",
+      "8   00009  Adh2020    Adhésion  Bénéficiaire   10.00   2020-03-03           6\n",
+      "9   00010  Don2020  Don Unique           NaN   50.00   2020-05-05           8\n",
+      "10  00011  Adh2020    Adhésion         Actif   10.00   2020-06-20           8\n",
+      "11  00012  Adh2020  Don Unique           NaN   30.00   2020-06-20           8\n",
+      "12  00013  Adh2020    Adhésion   Bienfaiteur   50.00   2020-05-20           5\n",
+      "13  00014  Adh2020    Adhésion         Actif   10.00   2020-04-21          12\n",
+      "14  00015  Adh2020  Don Unique           NaN   20.00   2020-04-21          12\n",
+      "15  00016  Adh2020    Adhésion         Actif   10.00   2020-03-30           9\n",
+      "16  00017  Don2020  Don Unique           NaN   30.00   2020-02-15           5\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 17 entries, 0 to 16\n",
       "Data columns (total 7 columns):\n",
-      " #   Column         Non-Null Count  Dtype \n",
-      "---  ------         --------------  ----- \n",
-      " 0   ID             17 non-null     object\n",
-      " 1   Campagne       17 non-null     object\n",
-      " 2   Opération      17 non-null     object\n",
-      " 3   Type_Adhérent  9 non-null      object\n",
-      " 4   _Montant_      17 non-null     object\n",
-      " 5   Date           17 non-null     object\n",
-      " 6   Contact_ID     17 non-null     int32 \n",
-      "dtypes: int32(1), object(6)\n",
-      "memory usage: 1012.0+ bytes\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 17 entries, 0 to 16\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column         Non-Null Count  Dtype \n",
-      "---  ------         --------------  ----- \n",
-      " 0   ID             17 non-null     object\n",
-      " 1   Campagne       17 non-null     object\n",
-      " 2   Opération      17 non-null     object\n",
-      " 3   Type_Adhérent  9 non-null      object\n",
-      " 4   _Montant_      17 non-null     object\n",
-      " 5   Date           17 non-null     object\n",
-      " 6   Contact_ID     17 non-null     object\n",
-      "dtypes: object(7)\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   ID             17 non-null     object        \n",
+      " 1   Campagne       17 non-null     object        \n",
+      " 2   Opération      17 non-null     object        \n",
+      " 3   Type_Adhérent  9 non-null      object        \n",
+      " 4   _Montant_      17 non-null     float64       \n",
+      " 5   Date           17 non-null     datetime64[ns]\n",
+      " 6   Contact_ID     17 non-null     object        \n",
+      "dtypes: datetime64[ns](1), float64(1), object(5)\n",
       "memory usage: 1.1+ KB\n"
      ]
     }
    ],
    "source": [
     "print(contact_id_nouveau)\n",
-    "contact_id_nouveau.info()\n",
-    "operation_nouveau.info()"
+    "dataframe_nouveau.info()"
    ]
   },
   {
@@ -544,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 134,
    "id": "c8973d49-98df-4f3d-9850-6b95a9a4f683",
    "metadata": {},
    "outputs": [
@@ -567,9 +578,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "930fb2e1-9666-4178-9ea7-bf623e7fb8ab",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": []
   }
